--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,26 +3,59 @@ cmake_minimum_required(VERSION 3.0)
 set(TARGET uart)
 
 #-----------------------------------------------------------------------------#
-set(CMAKE_SYSTEM_NAME Generic)
-set(CMAKE_CXX_COMPILER avr-g++)
-set(CMAKE_C_COMPILER avr-gcc)
 
-set(CMAKE_SHARED_TARGETRARY_LINK_C_FLAGS "")
-set(CMAKE_SHARED_TARGETRARY_LINK_CXX_FLAGS "")
+if (FAMILY STREQUAL AVR)
+	add_library(${TARGET} STATIC src/uart_atmega.c)
 
-set(CMAKE_EXE_LINKER_FLAGS -mmcu=${MCU})
-#-----------------------------------------------------------------------------#
+elseif (FAMILY STREQUAL TIVA)
+	add_library(${TARGET} STATIC src/uart_tiva.c)
 
-add_library(${TARGET} STATIC src/uart_atmega.c)
+else()
+	message(">> Failure due to missing FAMILY.")
+
+endif()
+
 target_include_directories(${TARGET} PUBLIC include)
 
 #-----------------------------------------------------------------------------#
-target_compile_options(${TARGET} PUBLIC -mmcu=${MCU}
-    									-std=gnu11
-    									-O2
-    									-Wall
-    									-Werror
-)
 
-target_compile_definitions(${TARGET} PUBLIC F_CPU=${F_CPU})
+if (FAMILY STREQUAL AVR)
+	target_compile_options(${TARGET} PUBLIC -mmcu=${MCU}
+											-std=gnu11
+											-O2
+											-Wall
+											-Werror
+	)
+
+	target_compile_definitions(${TARGET} PUBLIC F_CPU=${F_CPU})
+
 #-----------------------------------------------------------------------------#
+
+elseif (FAMILY STREQUAL TIVA)
+	target_link_libraries(${TARGET} ${TIVAWARE_PATH}/driverlib/gcc/libdriver.a)
+	target_include_directories(${TARGET} PUBLIC ${TIVAWARE_PATH})
+
+	target_compile_options(${TARGET} PUBLIC -mthumb
+											${CPU}
+											${FPU}
+											${FLOAT}
+											-ffunction-sections 
+											-fdata-sections    
+											-MD                                         
+											-pedantic           
+											-std=gnu11
+											-O2
+											-Wall
+											-Werror
+	)
+
+	target_compile_definitions(${TARGET} PUBLIC TARGET_IS_${REV}
+												PART_${MCU}
+	)
+
+#-----------------------------------------------------------------------------#
+
+else()
+	message(">> Failure due to missing FAMILY.")
+
+endif()
